feat: 전체 푸시 수신 설정과 일일 리마인더 스케줄러 추가 (#315)
* feat: 전체 푸시 수신 설정과 광고성 일일 리마인더 스케줄러 추가

전체 푸시 ON/OFF, 일일 리마인더 ON/OFF·시각 설정, 광고성·야간 광고성 수신 동의 API와
멀티프로세스 일일 리마인더 worker를 추가한다.

- 설정을 두 축으로 나눈다: subject별 전체 마스터(push_preferences)와 알림 종류별
  설정·occurrence 스케줄(scheduled_notification_preferences). 새 리텐션 알림은 컬럼이 아니라
  행으로 늘어난다.
- DAILY_REMINDER는 광고성으로 확정한다. 발송에 광고 수신 동의와 수신거부 token을 가진 설치를
  요구하고, 야간(21:00~08:00 KST) 여부는 각 FCM 호출 직전 실제 시각으로 다시 판정한다.
- 동의 상태·증적은 subject 축에 둔다(notification_consents + append-only event). 철회가 있어
  term_agreements를 상태 권위로 쓰지 않으며 clientRequestId로 재시도를 멱등 처리한다.
- worker는 매분 SKIP LOCKED로 due occurrence를 claim해 처리 날짜와 다음 미래 occurrence를 먼저
  commit하고 FCM은 transaction 밖에서 호출한다(at-most-once). 허용 지연 30분을 넘긴 occurrence는
  발송 없이 넘겨 복구 시 새벽 발송을 막는다.
- 로그인 없이 알림에서 바로 호출하는 수신거부 API를 추가한다. FID 미등록·token 불일치는 같은
  401로 수렴해 등록 존재를 노출하지 않는다.
- 가입 transaction이 기본 행 3종을 함께 만들고 탈퇴 transaction이 FK 순서대로 지운다.

Closes #314

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* feat: 마스터 행 누락 관측·보정과 설정 API 약관 gate 면제 테스트 추가

- 기존 정보성 푸시 경로가 마스터 행 부재를 만나면 laimory.push.preference.missing으로 관측하고
  기본 행을 best-effort 보정한다. 보정 실패는 발송 판정을 바꾸지 않는다.
- 여섯 설정 endpoint가 LOGIN 약관 gate를 타지 않음을 MVC 테스트로 고정한다.
- 같은 수신거부 token으로 새 FID를 등록해도 새 행이 정상 insert됨을 실 DB로 확인한다.
- 마스터 행이 보정되면서 subject mapping을 직접 지우던 통합 테스트 정리 코드가 FK RESTRICT에
  걸리므로 공용 fixture로 순서를 맞춘다.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* fix: occurrence 전진 계산을 SQL에서 Java로 옮기고 시각 변경 동의 gate 축소

- claim 전진 값(처리 occurrence 날짜·다음 예정 시각)을 SQL의 date()/timestamp() 파생에서
  Java KST 계산으로 옮긴다. JDBC가 DATETIME 파라미터를 connection timezone으로 변환하는데 TIME
  컬럼은 변환하지 않아, DB 안에서 둘을 섞으면 JVM timezone에 따라 결과가 달라졌다(UTC JVM에서
  날짜 +1일·시각 -9시간). 같은 전진 값을 갖는 행끼리 묶어 문장 수는 유지한다.
- 시각 변경 경로가 일반 광고 동의까지 요구해, 수신거부로 동의를 철회한 사용자가 시각을 주간으로
  바꾸는 것조차 막혔다. 야간으로 옮길 때만 야간 동의를 요구하도록 좁힌다.
- claim 경로 전체를 태우는 통합 테스트와 시각별 전진 값 분리 단위 테스트를 추가한다.
  테스트 fixture의 "지금"도 JVM zone이 아니라 KST로 고정한다.

Co-Authored-By: Claude Opus 5 (1M con